--- a/front_end/index.html
+++ b/front_end/index.html
@@ -18,6 +18,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
+                    <div id="banner">
+                        Muze
+                    </div>
                     <div id="content">
                         
                     </div>
