front end stuff

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>React Tutorial</title>
+        <title>Geo-Music</title>
         <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <!-- Latest compiled and minified CSS -->
@@ -18,9 +18,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div id="banner">
-                        Muze
-                    </div>
                     <div id="content">
                         
                     </div>
